# lattice

./: .gitignore  AGENTS.md  BENCH.md  CLAUDE.md  Cargo.toml  IMPL_REPORT_462.md  IMPL_REPORT_525.md  IMPL_REPORT_547.md  IMPL_REPORT_585.md  Makefile  README.md  _typos.toml  codex_review_architecture.md  codex_review_coherence.md  codex_review_design_alignment.md  codex_review_perf_metal.md  codex_review_pr196.md  codex_review_strategy.md  deno.json  deny.toml  implementation_notes.md  pr_review.md  pyproject.toml  research.md  review.md
.cargo/: audit.toml
crates/embed/: BASELINE.toml  CHANGELOG.md  CONFIG.md  Cargo.toml  DESIGN.md  README.md
crates/embed/benches/: README.md  embeddings.rs  simd.rs  simd_bench.rs  simd_opt_bench.rs  simsimd_comparison.rs
crates/embed/docs/: INDEX.md  backfill.md  design.md  migration.md  model.md  service.md  simd.md
crates/embed/examples/: basic_embed.rs  dump_parity_embeddings.rs  similarity.rs
crates/embed/proptest-regressions/simd/: tests.txt
crates/embed/src/: cache.rs  error.rs  lib.rs  model.rs  types.rs  vision.rs  wasm.rs
crates/embed/src/backfill/: coordinator.rs  mod.rs  tests.rs  types.rs
crates/embed/src/migration/: controller.rs  mod.rs  tests.rs  types.rs
crates/embed/src/service/: cached.rs  mod.rs  native.rs  tests.rs
crates/embed/src/simd/: binary.rs  cosine.rs  distance.rs  dot_product.rs  int4.rs  mod.rs  normalize.rs  quantized.rs  tests.rs  tier.rs
crates/embed/tests/: embed_drift_baseline.rs  embed_parity_vs_hf.rs  f16_feature_load_guard.rs  inference_dot_product_parity.rs  integration.rs  perf_regression.rs  simd_edge_cases.rs  simd_precision.rs  tokenizer_parity_e2e.rs
crates/embed/tests/wasm/: embed_parity_wasm.mjs  simd128_parity_wasm.mjs
crates/fann/: Cargo.toml  README.md
crates/fann/benches/: router_online.rs
crates/fann/docs/: INDEX.md  design.md  gpu.md  network.md  training.md
crates/fann/examples/: fann_xor.rs
crates/fann/src/: activation.rs  error.rs  layer.rs  lib.rs
crates/fann/src/gpu/: buffer.rs  circuit_breaker.rs  context.rs  error.rs  mod.rs  network.rs  shader_manager.rs  shaders.rs
crates/fann/src/network/: builder.rs  mod.rs  serialization.rs
crates/fann/tests/: cpu_gpu_parity.rs  proptest_network.rs  shader_validation.rs
crates/inference/: BASELINE.toml  CONFIG.md  Cargo.toml  DESIGN.md  METAL_TRACE.md  README.md
crates/inference/benches/: attention_bench.rs  attention_dispatch_bench.rs  attn_opt_bench.rs  batch_throughput_bench.rs  compute_attention_bench.rs  cross_turn_prefix_cache_bench.rs  decode_attn_bench.rs  differential_attention_bench.rs  e2e_bench.rs  elementwise_bench.rs  elementwise_cpu_bench.rs  f16_convert_bench.rs  gated_attention_bench.rs  inference_bench.rs  inference_perf.rs  kv_cache_f16_bench.rs  kv_cache_layout_bench.rs  lm_head_bench.rs  matmul_opt_bench.rs  metal_decode_bench.rs  metrics_bench.rs  mtp_decode.rs  native_sparse_attention_bench.rs  pruning_bench.rs  quarot_hadamard_bench.rs  tokenizer_bench.rs  topk_readback.rs
crates/inference/benchmarks/: baseline.json
crates/inference/examples/: bench_concurrent.rs  bench_dispatch.rs  bench_dispatch2.rs  bench_embed_quality.rs  bench_embedding.rs  bench_gdn.rs  bench_gdn_decode.rs  bench_gdn_prefill_ab.rs  bench_gdn_state.rs  bench_gemm_variants.rs  bench_gpu.rs  bench_kernels.rs  bench_kernels2.rs  bench_metal.rs  bench_mps_gemm.rs  bench_persistent_state.rs  bench_profile.rs  bench_pruning.rs  bench_q4_prefill.rs  bench_q8_prefill.rs  bench_quality.rs  bench_simdgroup.rs  bench_stability.rs  bench_suite.rs  decode_profile.rs  diff_attn_layer23.rs  diff_gdn_layer.rs  layer_sweep.rs  profile_metal.rs  profile_metal_decode.rs
crates/inference/src/: download.rs  error.rs  generate.rs  lib.rs  lora_hook.rs  metrics.rs  mixture.rs  model_format.rs  moe_admission.rs  pool.rs  pruning.rs  rope.rs  sampling.rs  speculative.rs  stop_reason.rs  stop_token_contract.rs
crates/inference/tests/: audit_tokenizer_parity.rs  bert_lora_bounds_regression.rs  differential_attention_test.rs  eval_perplexity_w3_cli_test.rs  examples_no_preset_fallback.rs  gated_attention_hf_test.rs  gated_attention_test.rs  gdn_decay_value_head_diff.py  gemma4_e2e_forward_test.rs  gemma4_tensor_manifest_test.rs  gemma4_tokenizer_goldens_test.rs  grammar_json_schema_regression.rs  grammar_tbv_probe.rs  lora_forward_parity_test.rs  native_sparse_attention_test.rs  perf_regression.rs  quantize_q4_reader_refactor.rs  quarot_q4_composed_golden.rs  vision_goldens_fixture_test.rs  vision_s3_vit_forward_test.rs  vision_s3b_vit_metal_gate_test.rs  vision_s4_merger_test.rs  vision_s5b_e2e_gate_test.rs  vision_serve_e2e_test.rs  w3_detection_routing_test.rs  w3_weights_integration.rs
crates/transport/: Cargo.toml  README.md
crates/transport/benches/: round0_transport.rs
crates/transport/docs/: INDEX.md  algorithms.md  design.md
crates/transport/examples/: drift_compare.rs  sinkhorn_ot.rs
crates/transport/src/: barycenter.rs  bench.rs  cost.rs  divergence.rs  drift.rs  lib.rs  logsumexp.rs  math.rs  online_drift.rs  reference_cases.rs  sinkhorn.rs  sinkhorn_log.rs  tests.rs  transport_plan.rs  unbalanced.rs
crates/transport/tests/: input_validation.rs
crates/tune/: Cargo.toml  README.md
crates/tune/benches/: e2e_bench.rs  train_bench.rs
crates/tune/docs/: ADR-001-teacher-providers.md  ADR-002-model-registry.md  INDEX.md  data.md  design.md  distill.md  lora-core.md  lora-io.md  lora-router.md  registry.md  train.md
crates/tune/src/: error.rs  lib.rs  train_support.rs
crates/tune/tests/: bench_backward_737.rs  e2e_lora.rs  gdn_lora_nll_parity.rs  layer23_golden_bridge.rs  lora_apply_no_alloc.rs  perf_regression.rs  proptest_softmax.rs  training_pipeline.rs
npm/lattice-embed-native/: .gitignore  Cargo.toml  README.md  binding.js  index.d.ts  index.js  package-lock.json  package.json  smoke.mjs
npm/lattice-embed-native/__test__/: embedding.spec.mjs
npm/lattice-embed-native/scripts/: assert-packlist.mjs  assert-platform-packlist.mjs  assert-prebuild-matrix.mjs
npm/lattice-embed-native/src/: lib.rs
(+4267 files in other folders)
