[project]
name = "lattice-dev"
version = "0.1.0"
description = "Dev scripts for lattice inference engine"
requires-python = ">=3.11"

dependencies = [
    "pyarrow>=17.0",
    "datasets>=3.0",
    "numpy>=1.26",
    "mlx>=0.22",
    "mlx-lm>=0.21",
    "transformers>=4.46",
    "matplotlib>=3.9",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    # HF differential golden fixtures (scripts/vision_goldens_qwen35.py, ADR-069) need a real
    # torch + torchvision runtime to execute the reference Qwen3.5 vision forward pass.
    # transformers pinned exactly (not just >=4.46 above) so `uv run` reproduces the fixtures'
    # recorded methodology byte-for-byte; see tests/fixtures/vision/README.md.
    "torch>=2.9",
    "torchvision>=0.24",
    "pillow>=10",
    "transformers==5.12.1",
]
