[project]
name = "lattice-dev"
version = "0.1.0"
description = "Dev scripts for lattice inference engine"
requires-python = ">=3.11"

dependencies = [
    "pyarrow>=17.0",
    "datasets>=3.0",
    "numpy>=1.26",
    "mlx>=0.22",
    "mlx-lm>=0.21",
    "transformers>=4.46",
    "matplotlib>=3.9",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    # HF differential golden fixtures (scripts/vision_goldens_qwen35.py, ADR-069) need a real
    # torch + torchvision runtime to execute the reference Qwen3.5 vision forward pass.
    # Pinned exactly (not just lower-bounded like transformers>=4.46 above) so `uv run`
    # reproduces the fixtures' recorded methodology byte-for-byte instead of resolving a newer
    # stack that could change CPU forward-pass numerics; see tests/fixtures/vision/README.md.
    # `validate_runtime_versions` in the generator rejects drift from these at runtime too, so
    # this pin and that check must be updated together (REFERENCE_VERSIONS in the script).
    # numpy is also pinned exactly here (the top-level `dependencies` entry above stays
    # `>=1.26` for other project scripts) because the generator uses numpy directly
    # (`np.random.default_rng`, `np.linspace`) to build the deterministic procedural PNG.
    "torch==2.13.0",
    "torchvision==0.28.0",
    "pillow==12.3.0",
    "transformers==5.12.1",
    "numpy==2.4.6",
]
