[package]
name = "lattice-fann"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Fast neural network primitives for Lattice - tiny models, fast inference"

[features]
default = ["std", "simd"]
std = []
simd = []
parallel = ["dep:rayon"]
serde = ["dep:serde", "dep:serde_json"]
# GPU acceleration via wgpu (Metal on macOS, Vulkan on Linux, DX12 on Windows)
gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck", "dep:futures", "std"]
# Enable GPU tests that require actual GPU hardware (disabled in CI by default)
gpu-tests = ["gpu"]

[dependencies]
thiserror.workspace = true
tracing = "0.1"

rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"

serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
rayon = { version = "1.10", optional = true }

# GPU dependencies
wgpu = { version = "23.0", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1.19", features = ["derive"], optional = true }
futures = { version = "0.3", optional = true }

[[example]]
name = "fann_xor"

[dev-dependencies]
approx = "0.5"
proptest.workspace = true
# For WGSL shader validation tests (no GPU required)
naga = { version = "23.0", features = ["wgsl-in"] }

[lints]
workspace = true
