[package]
name = "lattice-inference"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure Rust transformer inference engine — safetensors loading, SIMD matmul, BGE/Qwen3 embeddings"

[features]
default = ["std", "download"]
std = []
f16 = []
metal-gpu = ["dep:metal", "dep:objc"]
wgpu-gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]
bench-internals = []
bench-ort = ["dep:ort", "dep:tokenizers", "f16"]
backfill = ["dep:rusqlite", "f16"]
download = ["dep:ureq"]
train-backward = []
# AdapterRouter gate: enables the lattice-fann backed routing module.
# blend_lora_layer_data and generate_with_lora_mixture do NOT require this
# feature — they are always available.
mixture = ["dep:lattice-fann"]
# GDN state-traffic byte counters (issue #422, measure-first for ADR-058).
# Opt-in only: the default decode path stays byte-identical when this is off.
gdn-state-counters = []

[dependencies]
half.workspace = true
memmap2 = "0.9"
indexmap = "2"
rustc-hash = "2"
rayon = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
clap = { workspace = true }
axum = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
ureq = { version = "2", features = ["tls"], optional = true }
sha2.workspace = true
rusqlite = { workspace = true, optional = true }
metal = { version = "0.33", optional = true }
objc = { version = "0.2", optional = true }
wgpu = { version = "24", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
ort = { version = "2.0.0-rc.12", optional = true }
tokenizers = { version = "0.22", optional = true, default-features = false, features = ["progressbar", "onig"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
lattice-fann = { version = "0.4.2", path = "../fann", optional = true }

[[bin]]
name = "lattice"
path = "src/bin/lattice.rs"

[[bin]]
name = "backfill_qwen3"
path = "src/bin/backfill_qwen3.rs"
required-features = ["backfill"]

[[bin]]
name = "quantize_q4"
path = "src/bin/quantize_q4.rs"

[[bin]]
name = "chat_metal"
path = "src/bin/chat_metal.rs"
required-features = ["f16", "metal-gpu"]

[[bin]]
name = "lattice_serve"
path = "src/bin/lattice_serve.rs"
required-features = ["f16", "metal-gpu"]

[[bin]]
name = "bench_decode_ab"
path = "src/bin/bench_decode_ab.rs"
required-features = ["f16", "metal-gpu"]

[[bin]]
name = "bench_lora_mixture"
path = "src/bin/bench_lora_mixture.rs"
required-features = ["f16", "metal-gpu"]

[[bin]]
name = "ppl_metal"
path = "src/bin/ppl_metal.rs"
required-features = ["f16", "metal-gpu"]

[[bin]]
name = "bench_logit_dump"
path = "src/bin/bench_logit_dump.rs"
required-features = ["f16", "metal-gpu"]

[[bin]]
name = "dump_quarot_q4_golden"
path = "src/bin/dump_quarot_q4_golden.rs"
required-features = ["f16", "metal-gpu"]

[[example]]
name = "diff_attn_layer23"
required-features = ["train-backward", "f16"]

[[example]]
name = "diff_gdn_layer"
required-features = ["train-backward", "f16"]

[[example]]
name = "bench_metal"
required-features = ["f16", "metal-gpu"]

[[example]]
name = "bench_gpu"
required-features = ["f16", "wgpu-gpu"]

[[example]]
name = "bench_suite"
required-features = ["f16"]

[[example]]
name = "bench_embedding"
required-features = ["f16"]

[[example]]
name = "profile_metal"
required-features = ["f16", "metal-gpu"]

[[example]]
name = "profile_metal_decode"
required-features = ["f16", "metal-gpu"]

[[example]]
name = "bench_profile"
required-features = ["f16"]

[[example]]
name = "layer_sweep"
required-features = ["f16"]

[[example]]
name = "bench_q4_prefill"
required-features = ["f16", "metal-gpu"]

[[example]]
name = "bench_q8_prefill"
required-features = ["f16", "metal-gpu"]

[[example]]
name = "bench_gdn_decode"
required-features = ["f16", "metal-gpu"]

[[example]]
name = "bench_persistent_state"
required-features = ["f16", "metal-gpu"]

[[example]]
name = "bench_stability"
required-features = ["f16", "metal-gpu"]

[[example]]
name = "bench_concurrent"
required-features = ["f16", "metal-gpu"]

[[example]]
name = "decode_profile"
required-features = ["f16", "metal-gpu"]

[[example]]
name = "bench_gdn_state"
required-features = ["f16", "metal-gpu", "gdn-state-counters"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "attention_bench"
harness = true

[[bench]]
name = "differential_attention_bench"
harness = false

[[bench]]
name = "native_sparse_attention_bench"
harness = false

[[bench]]
name = "gated_attention_bench"
harness = false

[[bench]]
name = "inference_bench"
harness = false

[[bench]]
name = "tokenizer_bench"
harness = false

[[bench]]
name = "e2e_bench"
harness = false

# Disabled (bench = false) pending revival. This is a counting-allocator
# baseline (OPT-002..005) that asserts exact per-op allocation indices. It was
# authored against an f32 FlatKVCache; the lib has since migrated KV storage to
# f16, so the cache read/write sites no longer typecheck. The naive fix —
# f32<->f16 conversions at the cache boundary — would inject the very
# allocations this bench counts, silently corrupting every measurement. Reviving
# it means re-deriving the alloc baseline against the f16 decode path, which
# belongs in a dedicated perf PR with bench output, not the CI-hardening gate.
# Tracked: GTD lattice "revive inference_perf alloc baseline against f16 KV cache".
[[bench]]
name = "inference_perf"
harness = false
bench = false

[[bench]]
name = "topk_readback"
harness = false

[[bench]]
name = "decode_attn_bench"
harness = false
required-features = ["f16"]

[[bench]]
name = "compute_attention_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "kv_cache_layout_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "metal_decode_bench"
harness = false
required-features = ["metal-gpu", "f16"]

[[bench]]
name = "mtp_decode"
harness = false
required-features = ["metal-gpu", "f16"]

[[bench]]
name = "lm_head_bench"
harness = false

[[bench]]
name = "elementwise_cpu_bench"
harness = false

[[bench]]
name = "elementwise_bench"
harness = false

[[bench]]
name = "attn_opt_bench"
harness = false

[[bench]]
name = "metrics_bench"
harness = false

[[bench]]
name = "pruning_bench"
harness = false

[[bench]]
name = "kv_cache_f16_bench"
harness = false

[[bench]]
name = "attention_dispatch_bench"
harness = false

[[bench]]
name = "f16_convert_bench"
harness = false

[lints]
workspace = true
