[package]
name = "lattice-tune"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Training infrastructure for Lattice neural models"

[features]
default = ["std", "sqlite"]
std = []
serde = ["dep:serde", "dep:serde_json", "lattice-fann/serde"]
# GPU-accelerated training via lattice-fann
gpu = ["lattice-fann/gpu", "dep:wgpu", "dep:bytemuck"]
# Enable GPU tests that require actual GPU hardware (disabled in CI by default)
gpu-tests = ["gpu"]
# Safe checkpoint serialization (recommended for production)
safetensors = ["dep:safetensors"]
# Enable `impl LoraHook for LoraAdapter` — lets lattice-tune adapters be passed
# directly to inference model hooks. Requires lattice-inference as a dependency.
# See ADR-031 §Downstream Usage and ADR-057 §D5.
inference-hook = ["dep:lattice-inference"]
train-backward = ["dep:lattice-inference", "lattice-inference/train-backward", "lattice-inference/f16", "safetensors", "serde"]
# SQLite-backed model registry storage
sqlite = ["dep:rusqlite", "serde"]
# Online adapter-selector refit from preference feedback (experimental, bench-gated).
# Pulls in the lattice-fann training primitives (RLOO / EWC++) for gate updates.
mixture = ["lattice-fann/online-router"]
# Fixed labels for tests and examples. Never enables the default labeling path.
simulated-teacher = []

[dependencies]
lattice-fann = { version = "0.7.0", path = "../fann" }
thiserror.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
arc-swap.workspace = true
parking_lot.workspace = true

# GPU dependencies (optional)
wgpu = { version = "23.0", optional = true }
bytemuck = { version = "1.19", features = ["derive"], optional = true }

# Safe serialization (optional)
safetensors = { workspace = true, optional = true }

# SQLite storage (optional)
rusqlite = { workspace = true, optional = true }

# Inference hook and training backward pass (optional — for LoRA adapter injection and gradients)
lattice-inference = { version = "0.7.0", path = "../inference", optional = true, features = ["f16"] }

[[bin]]
name = "generate_lora"
path = "src/bin/generate_lora.rs"
required-features = ["safetensors", "inference-hook"]

[[bin]]
name = "train_grad"
path = "src/bin/train_grad.rs"
required-features = ["train-backward"]

[[bin]]
name = "train_grad_layer23"
path = "src/bin/train_grad_layer23.rs"
required-features = ["train-backward"]

[[bin]]
name = "train_grad_full"
path = "src/bin/train_grad_full.rs"
required-features = ["train-backward"]

[[test]]
name = "bench_backward_737"
path = "tests/bench_backward_737.rs"
required-features = ["train-backward"]

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true

[lints]
workspace = true
